Notice alert z-index fixed

--- a/app/assets/stylesheets/default-ui.css
+++ b/app/assets/stylesheets/default-ui.css
@@ -94,7 +94,9 @@
 #error_explanation h2{
   border-radius: 7px 7px 0px 0px;
 }
-
+.tbox{
+  z-index: 9999!important;
+}
 #alert{
 /* Fallback for web browsers that doesn't support RGBa */
 	background: rgb(0, 0, 0);
@@ -121,7 +123,7 @@
   height: 33px;
   line-height: 18px;
   padding: 5px;
-  position: relative;
+
   text-shadow: #111 0px 1px 1px;
   width: 400px!important;
   text-align:center;
